@@ -1,6 +1,11 @@
 
 CHANGELOG
 
+* 2014/09/02:
+
+    - Added '--threads auto' to use the same number of threads
+      as cpus are available on the current system.
+
 * 2014/09/01:
 
     - Use 'os.posix_fadvise', available since Python 3.3+.
